--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.19.2",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-manifest": "^4.19.0",
     "gatsby-plugin-mdx": "^3.19.0",
     "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-source-filesystem": "^4.19.0",
+    "gatsby-transformer-sharp": "^4.20.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
