--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "gatsby-plugin-mdx": "^3.19.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^4.20.0",
-    "gatsby-remark-vscode": "^3.3.1",
     "gatsby-source-filesystem": "^4.19.0",
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
+    "prism-react-renderer": "^1.3.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "styled-components": "^5.3.5"
